<resources>
<string name="app_name">Security alarm+</string>
<string name="action_settings">Settings</string>

<string name="preference_title">Setting items</string>

<string name="auto_alarm_title">Automatic alarm</string>
<string name="auto_alarm_summary">Sound the alarm the app startup</string>

<string name="auto_light_title">Automatic light on</string>
<string name="auto_light_summary">Lights up when the application starts up</string>

<string name="alarm_stop_title">Alarm stop</string>
<string name="alarm_stop_summary">Stop at 10 times tap the alarm</string>

<string name="alarm_kind_title">Alarm type</string>
<string name="alarm_kind_summary">To set the type of alarm</string>
<string name="alarm_kind_dialog">Alarm type</string>

<string name="alarm_value_title">Alarm volume</string>
<string name="alarm_value_summary">To set the volume of the alarm</string>
<string name="alarm_value_dialog">Alarm volume</string>

<string name="mail_addr1_title">E-mail address 1</string>
<string name="mail_addr2_title">E-mail address 2</string>
<string name="mail_addr3_title">E-mail address 3</string>
<string name="mail_addr4_title">E-mail address 4</string>
<string name="mail_addr5_title">E-mail address 5</string>
<string name="mail_addr_summary">To set up an e-mail address</string>
<string name="mail_addr_dialog">Input of e-mail address</string>

<string name="mail_title_title">E-mail title</string>
<string name="mail_title_summary">To set up an e-mail title</string>
<string name="mail_title_dialog">Input of e-mail title</string>

<string name="mail_text_title">E-mail text</string>
<string name="mail_text_summary">To set up an e-mail text</string>
<string name="mail_text_dialog">Input of e-mail text</string>

<string-array name="kind_entries_list">
    <item>Alarm 1</item>
    <item>Alarm 2</item>
    <item>Alarm 3</item>
    <item>Alarm 4</item>
    <item>Alarm 5</item>
    <item>Ringtone 1</item>
    <item>Ringtone 2</item>
</string-array>
<string-array name="kind_entryvalues_list">
    <item>kind_1</item>
    <item>kind_2</item>
    <item>kind_3</item>
    <item>kind_4</item>
    <item>kind_5</item>
    <item>kind_6</item>
    <item>kind_7</item>
</string-array>

<string-array name="entries_list">
    <item>0(Mute)</item>
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
    <item>6</item>
    <item>7</item>
    <item>8</item>
    <item>9</item>
    <item>10</item>
    <item>11</item>
    <item>12</item>
    <item>13</item>
    <item>14</item>
    <item>15(maximum)</item>
</string-array>
<string-array name="entryvalues_list">
    <item>0</item>
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
    <item>6</item>
    <item>7</item>
    <item>8</item>
    <item>9</item>
    <item>10</item>
    <item>11</item>
    <item>12</item>
    <item>13</item>
    <item>14</item>
    <item>15</item>
</string-array>

</resources>
